add endpoint search vehicle for filters
